--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-base-table": "^1.9.1",
     "react-dom": "^16.12.0",
